<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ImageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="32dp">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            tools:src="@drawable/original_p" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255" />

        <TextView
            android:id="@+id/tvValue"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="128" />
    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/flOriginal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_original"
                    android:src="@drawable/original_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_original"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flGrayscale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_grayscale"
                    android:src="@drawable/grayscale_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_grayscale"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flSepia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_sepia"
                    android:src="@drawable/sepia_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_sepia"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flBrightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_brightness"
                    android:src="@drawable/brightness" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_brightness"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flBlur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_blur"
                    android:src="@drawable/blur_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_blur"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flAutumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_autumn"
                    android:src="@drawable/autumn_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_autumn"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flBone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_bone"
                    android:src="@drawable/bone_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_bone"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flJet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_jet"
                    android:src="@drawable/jet_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_jet"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flWinter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_winter"
                    android:src="@drawable/winter_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_winter"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flRainbow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_rainbow"
                    android:src="@drawable/rainbow_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_rainbow"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flOcean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_ocean"
                    android:src="@drawable/ocean_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_ocean"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flSummer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_summer"
                    android:src="@drawable/summer_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_summer"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flSpring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_spring"
                    android:src="@drawable/spring_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_spring"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flCool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_cool"
                    android:src="@drawable/cool_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_cool"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flHsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_hsv"
                    android:src="@drawable/hsv_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_hsv"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flPink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_pink"
                    android:src="@drawable/pink_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_pink"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flHot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_hot"
                    android:src="@drawable/hot_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_hot"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flParula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/indicator"
                android:padding="4dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/filter_parula"
                    android:src="@drawable/parula_p" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#9000"
                    android:text="@string/filter_parula"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </FrameLayout>
        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>